--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,106 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  width: 100%;
+  height: 100vh;
+  /* text-align: center; */
+}
+
+.app_controls {
+  width: 100%;
+  padding: 0.5rem;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  text-align: center;
+}
+
+.app_controls select,
+input,
+button {
+  width: 50%;
+  height: 2rem;
+  margin: 0.5rem auto;
+  outline: none;
+  border-radius: 5px;
+  border: solid DodgerBlue 0.5px;
+}
+
+@media all and (max-width: 800px) {
+  .app_controls select,
+  input,
+  button {
+    width: 90%;
+  }
+}
+
+.app_controls input {
+  padding-left: 0.5rem;
+}
+
+.app_controls select:hover {
+  border: solid 0.5px RoyalBlue;
+}
+
+.app_controls input:hover {
+  border: solid 0.5px RoyalBlue;
+}
+
+.app_controls button:hover {
+  background: RoyalBlue;
+}
+
+.app_controls button {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  /* padding: 12px 30px; */
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.container_meme {
+  width: 37%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.container_meme span {
+  position: absolute;
+  font-size: 38px;
+  top: 10%;
+  /* font-size: 1.8rem; */
+  font-weight: 900;
+  text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000,
+    0 -2px 0 rgb(255 250 250), 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000;
+  /* -webkit-text-stroke: 1px blue; */
+  color: white;
+  font: bold;
+  text-transform: uppercase;
+}
+
+.container_meme span:nth-child(2) {
+  top: 80%;
+}
+
+.container_meme img {
+  /* width: 700px; */
+  /* height: 480px; */
+}
+
+@media all and (max-width: 800px) {
+  .container_meme {
+    width: 90%;
+  }
+
+  .container_meme img {
+    width: 100%;
+  }
 }
